Fix for bug 84106. Save As for a page with post data tries to get the page out of the cache using its cache key. If the page is not in the cache, it prompts before re-posting. r=adamlock, sr=rpotts